# CSC4005_Distributed_and_Parallel_Computing

./: README.md  final.docx
Project 1 - Parallel Odd-Even Transposition Sort/118010141/csc4005-assignment-1/: CMakeLists.txt  README.md
Project 1 - Parallel Odd-Even Transposition Sort/118010141/csc4005-assignment-1-sequential/: generateNum.cpp  odd-even-sort_sequential.cpp
Project 1 - Parallel Odd-Even Transposition Sort/118010141/csc4005-assignment-1/include/: odd-even-sort.hpp
Project 1 - Parallel Odd-Even Transposition Sort/118010141/csc4005-assignment-1/src/: main.cpp  odd-even-sort.cpp  tests.cpp
Project 2 - Mandelbrot Set Computation/118010141/csc4005-imgui-mpi/: CMakeLists.txt
Project 2 - Mandelbrot Set Computation/118010141/csc4005-imgui-mpi/include/graphic/: graphic.hpp
Project 2 - Mandelbrot Set Computation/118010141/csc4005-imgui-mpi/src/: MPI.cpp
Project 2 - Mandelbrot Set Computation/118010141/csc4005-imgui-pthread/src/: Pthread.cpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-bonus/: CMakeLists.txt
Project 3 - N-body Simulation/118010141/csc4005-imgui-bonus/include/nbody/: body.hpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-bonus/src/: main.cpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-cuda/: CMakeLists.txt
Project 3 - N-body Simulation/118010141/csc4005-imgui-cuda/include/graphic/: graphic.hpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-cuda/src/: main.cu
Project 3 - N-body Simulation/118010141/csc4005-imgui-mpi/include/nbody/: body.hpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-mpi/src/: main.cpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-openmp/include/nbody/: body.hpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-openmp/src/: main.cpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-pthread/: CMakeLists.txt
Project 3 - N-body Simulation/118010141/csc4005-imgui-pthread/include/nbody/: body.hpp
Project 3 - N-body Simulation/118010141/csc4005-imgui-pthread/src/: main.cpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-cuda/: CMakeLists.txt
Project 4 - Heat Simulation/118010141/csc4005-imgui-cuda/src/: main.cu
Project 4 - Heat Simulation/118010141/csc4005-imgui-mpi+openmp/: CMakeLists.txt
Project 4 - Heat Simulation/118010141/csc4005-imgui-mpi+openmp/include/hdist/: hdist.hpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-mpi+openmp/src/: main.cpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-mpi/include/hdist/: hdist.hpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-mpi/src/: main.cpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-openmp/include/hdist/: hdist.hpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-openmp/src/: main.cpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-pthread/: CMakeLists.txt
Project 4 - Heat Simulation/118010141/csc4005-imgui-pthread/include/hdist/: hdist.hpp
Project 4 - Heat Simulation/118010141/csc4005-imgui-pthread/src/: graphic.cpp  main.cpp
