cmake_minimum_required(VERSION 3.12)
project(csc4005_assignment_1)
find_package(MPI REQUIRED)
add_subdirectory(googletest)
set(CMAKE_CXX_STANDARD 20)

include_directories(include)
add_library(odd-even-sort SHARED src/odd-even-sort.cpp)
target_include_directories(odd-even-sort PRIVATE ${MPI_CXX_INCLUDE_DIRS})
target_link_libraries(odd-even-sort PRIVATE ${MPI_CXX_LIBRARIES})
target_compile_definitions(odd-even-sort PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
target_compile_options(odd-even-sort PRIVATE ${MPI_CXX_COMPILE_OPTIONS})

add_executable(main src/main.cpp)
target_include_directories(main PRIVATE ${MPI_CXX_INCLUDE_DIRS})
target_link_libraries(main PRIVATE ${MPI_CXX_LIBRARIES} odd-even-sort)
target_compile_definitions(main PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
target_compile_options(main PRIVATE ${MPI_CXX_COMPILE_OPTIONS})

add_executable(gtest_sort src/tests.cpp)
target_include_directories(gtest_sort PRIVATE ${MPI_CXX_INCLUDE_DIRS})
target_link_libraries(gtest_sort PRIVATE ${MPI_CXX_LIBRARIES} gtest odd-even-sort)
target_compile_definitions(gtest_sort PRIVATE ${MPI_CXX_COMPILE_DEFINITIONS})
target_compile_options(gtest_sort PRIVATE ${MPI_CXX_COMPILE_OPTIONS})
add_test(testcases gtest_sort)